[package]
name = "byteio"
version = "0.0.0"
authors = ["Richard Berry <rjsberry@pm.me>"]
license = "MIT/Apache-2.0"
description = "I/O-like operations for contiguous u8 regions"
repository = "https://github.com/rjsberry/byteio"
keywords = ["bytes", "io", "no_std"]
categories = ["encoding", "no standard library"]
include = ["Cargo.toml", "src/**/*.rs", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
byteorder = { version = "1", default-features = false }

[dev-dependencies]
itertools = "0.8"
quickcheck = "0.8"
quickcheck_macros = "0.8"
