[package]
name = "byteio"
version = "0.2.2"
authors = ["Richard Berry <rjsberry@pm.me>"]
license = "MIT/Apache-2.0"
description = "I/O abstractions for bytes"
documentation = "https://docs.rs/byteio"
homepage = "https://github.com/rjsberry/byteio"
repository = "https://github.com/rjsberry/byteio"
readme = "README.md"
keywords = ["byte", "bytes", "binary", "io", "no_std"]
categories = ["encoding", "no-std"]
include = ["Cargo.toml", "src/**/*.rs", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"

[features]
default = ["std"]
std = []
alloc = []

[dev-dependencies]
itertools = "0.8"
quickcheck = { version = "0.8", default-features = false }
quickcheck_macros = "0.8"
